--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,15 @@
 h1{
     color: blue;
 }
-body{
-    background-image:url("background.jpg");
-    background-repeat:no-repeat;
-    background-size: 100% ;
+
+a{
+    margin-right: 50px;
+    margin-left: 140px;
+    margin-top: 50px;
+    text-decoration: none;
+    color: black;
+    background-color: chartreuse;
+    padding: 5px;
+    border: 3px solid red;
     
-    }
+}
