--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,13 @@
-h1{
-    color: blue;
-}
+
 
 a{
     margin-right: 50px;
     margin-left: 140px;
-    margin-top: 50px;
-    text-decoration: none;
+    text-decoration:none;
     color: black;
-    background-color: chartreuse;
+    background-color: green;
     padding: 5px;
-    border: 3px solid red;
+    border: 3px solid grey;
+    border-radius: 15px;
     
 }
