--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,10 +4,16 @@ a{
     margin-right: 50px;
     margin-left: 140px;
     text-decoration:none;
-    color: black;
-    background-color: green;
+    color: rgb(52, 29, 182);
+    background-color: rgb(245, 247, 245);
     padding: 5px;
-    border: 3px solid grey;
+    border: 3px solid rgb(52, 29, 182);
     border-radius: 15px;
     
+}
+
+a:hover{
+    color: red;
+    border-color: saddlebrown;
+    background-color: silver;
 }
